Sun Feb 27 21:34:21 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * include/LEESA/Expression_Traits.h:
        * include/LEESA/Operators.cpp:
        * include/LEESA/SP.cpp:
          function_traits are removed because C++0x lambdas and boost::bind
          function objects don't have argument_type and result_type typedefs.

        * tests/library-xsd/Makefile:
        * tests/library-xsd/driver.cxx:
        * tests/library-xsd/library.xml:
          Improved library-xsd's TEST5. It now tetst free functions, custom
          functors, boost::bind functros, and C++0x lambdas.

Sun Feb 27 00:27:42 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * include/LEESA/Carrier_Optimized.cpp:
        * include/LEESA/Carrier_Simple.h:
        * include/LEESA/Expression_Traits.h:
        * include/LEESA/LEESA.cpp:

        * tests/library-xsd/Makefile:

Sat Feb 26 20:54:22 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * include/LEESA/AP.cpp:
        * include/LEESA/Carrier_Optimized.h:
        * include/LEESA/Carrier_Optimized.cpp:
        * include/LEESA/Carrier_Simple.h:
        * include/LEESA/Concepts.h:
        * include/LEESA/Expression_Traits.h:
        * include/LEESA/Kind_Traits.h:
        * include/LEESA/LEESA.cpp:
        * include/LEESA/Operators.cpp:
        * include/LEESA/SP.cpp:
        * include/LEESA/Sequence.hpp:
        * include/LEESA/SingleStage.h:

          Added descriptive conditional compilation guards for rvalue-ref,
          lambda, decltype, and variadic templates

        * tests/library-xsd/Makefile:
        * tests/library-xsd/driver.cxx:
        * tests/library-xsd/testN.sh:

          Improved test code and a script for automating testing.

Tue Feb 22 08:15:10 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * tests/library-xsd/driver.cxx:
          Fixed compilation problems on Visual Studio 2010

Tue Feb 22 08:08:53 UTC 2011  Sumant Tambe  <sutambe@nospam>

        * INSTALL.txt:

        * include/LEESA/Expression_Traits.h: